--- a/.github/workflows/Ro2.yml
+++ b/.github/workflows/Ro2.yml
@@ -2,7 +2,7 @@ name: Auto PR Robot
 
 on:
   push:
-    branches: [ "add-ing2" ] # หุ่นยนต์จะตื่นมาทำงานเฉพาะตอนเรา Push เข้ากิ่งนี้
+    branches: [ "add-ing" ] # หุ่นยนต์จะตื่นมาทำงานเฉพาะตอนเรา Push เข้ากิ่งนี้
 
 jobs:
   open-pr:
@@ -19,7 +19,7 @@ jobs:
       - name: 2. สั่งหุ่นยนต์เปิด PR อัตโนมัติ
         uses: repo-sync/pull-request@v2
         with:
-          source_branch: "add-ing2"    # กิ่งต้นทาง
+          source_branch: "add-ing"    # กิ่งต้นทาง
           destination_branch: "main"  # กิ่งปลายทางที่เราอยากรวม
           pr_title: "หุ่นยนต์ส่งงานครับ: ${{ github.event.head_commit.message }}"
           pr_body: "PR นี้ถูกสร้างขึ้นโดยอัตโนมัติจากระบบ GitHub Actions"
