--- a/.github/workflows/Ro.yml
+++ b/.github/workflows/Ro.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: 3. ลองใช้หุ่นยนต์สร้างไฟล์ใหม่ขึ้นมาเอง
         run: |
-          echo "หุ่นยนต์กำลังสร้างไฟล์บันทึก..." > robot_log.txt
+          echo "หุ่นยนต์กำลังสร้างไฟล์บันทึก...." > robot_log.txt
           echo "สร้างเสร็จเมื่อเวลา: $(date)" >> robot_log.txt
           echo "จบการบันทึก" >> robot_log.txt
 
