--- a/.github/workflows/Ro.yml
+++ b/.github/workflows/Ro.yml
@@ -45,3 +45,9 @@ jobs:
           pr_title: "PR อัตโนมัติจากกิ่ง: ${{ github.ref_name }}"
           pr_body: "หุ่นยนต์เปิดให้เองครับ"
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr merge ${{ github.event.pull_request.number }} --merge --auto
