--- a/.github/workflows/Ro.yml
+++ b/.github/workflows/Ro.yml
@@ -2,52 +2,38 @@ name: My Upgraded Robot
 
 on:
   push:
-    branches: [ "main", "add-ing2" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - "add-ing2" # ทำงานเมื่อมีการ push ไปที่กิ่งนี้
 
 jobs:
   learning-job:
     runs-on: ubuntu-latest
+    # ส่วนนี้สำคัญเพื่อให้บอทมีสิทธิ์สร้าง PR และ Merge
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
-      - name: 1. ดึงโค้ดมาเตรียมไว้ (ต้องมีเสมอ)
+      - name: 1. Checkout code
         uses: actions/checkout@v4
 
-      - name: 2. ตรวจสอบข้อมูลผู้ใช้งาน
+      - name: 2. สร้างไฟล์บันทึก
         run: |
-          echo "คนที่สั่งให้หุ่นยนต์ทำงานคือ: ${{ github.actor }}"
-          echo "เหตุการณ์ที่เกิดขึ้นคือ: ${{ github.event_name }}"
-          echo "กำลังทำงานอยู่ที่กิ่ง: ${{ github.ref }}"
+          echo "หุ่นยนต์ทำงานเมื่อ: $(date)" > robot_log.txt
 
-      - name: 3. ลองใช้หุ่นยนต์สร้างไฟล์ใหม่ขึ้นมาเอง
-        run: |
-          echo "หุ่นยนต์กำลังสร้างไฟล์บันทึก..." > robot_log.txt
-          echo "สร้างเสร็จเมื่อเวลา: $(date)" >> robot_log.txt
-          echo "จบการบันทึก" >> robot_log.txt
-
-      - name: 4. ตรวจสอบไฟล์ทั้งหมด (รวมไฟล์ที่หุ่นยนต์เพิ่งสร้าง)
-        run: ls -l
-
-      - name: 5. ให้หุ่นยนต์อ่านข้อความในไฟล์ที่มันสร้างเอง
-        run: cat robot_log.txt
-
-      - name: 6. เช็คเวอร์ชันเครื่องมือในเครื่องหุ่นยนต์ (แถม)
-        run: |
-          node -v
-          python3 --version
-          git --version
-
-      - name: สั่งหุ่นยนต์เปิด Pull Request อัตโนมัติ 
-        uses: repo-sync/pull-request@v2
+      - name: 3. สร้าง Pull Request
+        uses: peter-evans/create-pull-request@v5
+        id: cpr
         with:
-          source_branch: "${{ github.ref_name }}"
-          destination_branch: "main"
-          pr_title: "PR อัตโนมัติจากกิ่ง: ${{ github.ref_name }}"
-          pr_body: "หุ่นยนต์เปิดให้เองครับ"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: "add-ing2" # กิ่งต้นทาง
+          base: "main"       # กิ่งปลายทาง
+          title: "Auto PR: จากกิ่ง add-ing2"
+          body: "จัดการรวมโค้ดให้อัตโนมัติ"
 
-      - name: Merge PR
+      - name: 4. Merge PR ทันที
+        if: steps.cpr.outputs.pull-request-number != ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr merge ${{ github.event.pull_request.number }} --merge --auto
+          gh pr merge ${{ steps.cpr.outputs.pull-request-number }} --merge --auto
