--- a/.github/workflows/del_bean.yml
+++ b/.github/workflows/del_bean.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 permissions:
-  contents: write # สำคัญมาก! เพื่อให้บอทมีสิทธิ์ลบ
+  contents: write # เพื่อให้บอทมีสิทธิ์ลบ
 
 jobs:
   delete-branch-job:
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: "1. เริ่มกระบวนการตรวจสอบ"
         run: |
-          echo "🤖 หุ่นยนต์ได้รับคำสั่งให้ลบกิ่ง: ${{ github.event.inputs.target_branch }}"
-          echo "👤 สั่งโดย: ${{ github.actor }}"
+          echo "หุ่นยนต์ได้รับคำสั่งให้ลบกิ่ง: ${{ github.event.inputs.target_branch }}"
+          echo "สั่งโดย: ${{ github.actor }}"
 
       - name: "2. ตรวจสอบความปลอดภัย (Safety Check)"
         run: |
@@ -49,6 +49,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           TARGET="${{ github.event.inputs.target_branch }}"
-          echo "🔥 กำลังลบกิ่ง $TARGET ออกจาก GitHub..."
+          echo "กำลังลบกิ่ง $TARGET ออกจาก GitHub..."
           gh api -X DELETE /repos/${{ github.repository }}/git/refs/heads/$TARGET
-          echo "🚀 สำเร็จ! กิ่ง $TARGET ถูกกำจัดเรียบร้อย"
+          echo "สำเร็จ! กิ่ง $TARGET ถูกกำจัดเรียบร้อย"
