--- a/.github/workflows/Ro.yml
+++ b/.github/workflows/Ro.yml
@@ -55,30 +55,30 @@ jobs:
           gh pr merge ${{ steps.cpr_step.outputs.pr_number }} --merge --auto
 
   # Job 2: เช็คสถานะ Project (ใช้ echo)
-  update_project_status:
-    needs: create-and-merge
-    if: success()
-    runs-on: ubuntu-latest
-    steps:  
-      - name: Check Project Status and Echo
-        env:
-          # เปลี่ยนจาก GITHUB_TOKEN เป็นชื่อ Secret ใหม่ที่เราสร้าง
-          GH_TOKEN: ${{ secrets.MY_PROJECT_TOKEN }} 
-          PROJECT_NUMBER: 5
-        run: |
-          # ดึงเลข Issue จาก Job ก่อนหน้ามาใช้ (ตรวจสอบว่าเลขตรงกันไหม)
-          ISSUE_NUM=${{ needs.create-and-merge.outputs.pr_number }}
-          echo "กำลังเช็คสถานะของ Issue #$ISSUE_NUM ใน Project หมายเลข $PROJECT_NUMBER..."
+  # update_project_status:
+  #   needs: create-and-merge
+  #   if: success()
+  #   runs-on: ubuntu-latest
+  #   steps:  
+  #     - name: Check Project Status and Echo
+  #       env:
+  #         # เปลี่ยนจาก GITHUB_TOKEN เป็นชื่อ Secret ใหม่ที่เราสร้าง
+  #         GH_TOKEN: ${{ secrets.MY_PROJECT_TOKEN }} 
+  #         PROJECT_NUMBER: 5
+  #       run: |
+  #         # ดึงเลข Issue จาก Job ก่อนหน้ามาใช้ (ตรวจสอบว่าเลขตรงกันไหม)
+  #         ISSUE_NUM=${{ needs.create-and-merge.outputs.pr_number }}
+  #         echo "กำลังเช็คสถานะของ Issue #$ISSUE_NUM ใน Project หมายเลข $PROJECT_NUMBER..."
 
-          # ใช้คำสั่งเดิม แต่ระบุ --user ให้ชัดเจนว่าเป็นโปรเจกต์ส่วนตัว
-          STATUS=$(gh project item-list $PROJECT_NUMBER --user "ing1403" --format json \
-            | jq -r ".items[] | select(.content.number == $ISSUE_NUM) | .status")
+  #         # ใช้คำสั่งเดิม แต่ระบุ --user ให้ชัดเจนว่าเป็นโปรเจกต์ส่วนตัว
+  #         STATUS=$(gh project item-list $PROJECT_NUMBER --user "ing1403" --format json \
+  #           | jq -r ".items[] | select(.content.number == $ISSUE_NUM) | .status")
 
-          if [ -z "$STATUS" ] || [ "$STATUS" == "null" ]; then
-            echo "ไม่พบข้อมูลงานนี้ใน Project Board"
-          else
-            echo "สถานะปัจจุบันของ Issue #$ISSUE_NUM คือ [ $STATUS ]"
-          fi
+  #         if [ -z "$STATUS" ] || [ "$STATUS" == "null" ]; then
+  #           echo "ไม่พบข้อมูลงานนี้ใน Project Board"
+  #         else
+  #           echo "สถานะปัจจุบันของ Issue #$ISSUE_NUM คือ [ $STATUS ]"
+  #         fi
 
   # Job 3: โทรหาไฟล์ลบ Branch
   # เหมือนให้ไฟล์นี้สามารถโทรหา auto delete
