--- a/.github/workflows/Ro.yml
+++ b/.github/workflows/Ro.yml
@@ -57,7 +57,7 @@ jobs:
   # Job 3: โทรหาไฟล์ลบ Branch
   # เหมือนให้ไฟล์นี้สามารถโทรหา auto delete
   call-delete-job:
-    needs: update_project_status # ให้รออัปเดตสถานะเสร็จก่อนค่อยลบ
-    if: success()
-    uses: ./.github/workflows/auto-delete.yml
-    secrets: inherit
+          needs: create-and-merge
+          if: needs.create-and-merge.result == 'success'
+          uses: ./.github/workflows/auto-delete.yml
+          secrets: inherit
