--- a/.github/workflows/pr-testings-PAT.yml
+++ b/.github/workflows/pr-testings-PAT.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Add PR to project
         env:
-          GH_TOKEN: ${{ secrets.YOUR_TOKEN }}
+          GH_TOKEN: ${{ secrets.MY_PROJECT_PAT }}
           PR_ID: ${{ github.event.pull_request.node_id }}
         run: |
           item_id="$( gh api graphql -f query='
@@ -56,7 +56,7 @@ jobs:
 
       - name: Set fields
         env:
-          GH_TOKEN: ${{ secrets.YOUR_TOKEN }}
+          GH_TOKEN: ${{ secrets.MY_PROJECT_PAT }}
         run: |
           gh api graphql -f query='
             mutation (
